casa-account-v1: switch to java8 syntax to accommodate Google cloud build